--- a/platformio.ini
+++ b/platformio.ini
@@ -9,28 +9,18 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = main
+src_dir = D:\Dominik\esp32
 
 [env]
 platform = espressif32@^6.4.0
 framework = espidf
-platform_packages =
-        framework-espidf @ https://github.com/tasmota/esp-idf/releases/download/v5.1.2-org/esp-idf-v5.1.2-org.zip
+platform_packages = framework-espidf @ https://github.com/tasmota/esp-idf/releases/download/v5.1.2-org/esp-idf-v5.1.2-org.zip
 board_build.partitions = partitions_example.csv
 monitor_filters = direct
 monitor_speed = 115200
 
-[env:esp32dev]
-board = esp32dev
+[env:seeed_xiao_esp32s3]
+board = seeed_xiao_esp32s3
 
-[env:esp32-c3-devkitm-1]
-board = esp32-c3-devkitm-1
-
-[env:esp32-s3]
-board = esp32s3box
-
-; [env:esp32-s3-debug]
-; extends = env:esp32-s3
-; upload_protocol = esp-builtin
-; debug_tool = esp-builtin
-; build_type = debug
+[env:seeed_xiao_esp32c3]
+board = seeed_xiao_esp32c3
