--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = D:\Dominik\esp32
+src_dir = main
 
 [env]
 platform = espressif32@^6.4.0
@@ -19,8 +19,11 @@ board_build.partitions = partitions_example.csv
 monitor_filters = direct
 monitor_speed = 115200
 
-[env:seeed_xiao_esp32s3]
-board = seeed_xiao_esp32s3
+[env:esp32dev]
+board = esp32dev
+
+[env:esp32-c3-devkitm-1]
+board = esp32-c3-devkitm-1
 
 [env:seeed_xiao_esp32c3]
 board = seeed_xiao_esp32c3
